--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,14 @@
 </head>
 <body>
   <h1>webpack starter</h1>
-  <p>✨ A lightweight foundation for your next webpack based frontend project.</p>
+  <ul>
+    <li>
+        <div>
+
+      </div>
+    </li>
+    <li><div>2</div></li>
+    <li><div>3</div></li>
+  </ul>
 </body>
 </html>
